# env-check

./: .env-check-cache.json  .env.anomaly  .env.bak  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cache/: anomaly_baseline.json
.github/workflows/: ci.yml  env-check.yml
env_check/: __init__.py  __main__.py  cache.py  cli.py  config_loader.py  drift_detection.py  env_linter.py  main.py  plugin_manager.py  secret_analyzer.py  secret_heuristics.py  severity.py  validator.py
env_check/output/: color.py  json_output.py  table.py
env_check/schemas/: schema.anomaly.json
env_check/validators/: base.py  enum_validator.py  file_exists_validator.py  non_empty_validator.py  range_validator.py  regex_validator.py  type_validator.py
examples/: .env.prod  .env.staging  .envcheck.yml  out.json
experimental/: autofix.py  exposure_detector.py  feature_flag_checker.py  output.py  parallel_runner.py  patterns.py  plugins.py  repo_scanner.py  schema_validator.py  secret_heuristics.py  sync_checker.py  template_gen.py
experimental/plugins/: p1.py
experimental/schemas/: schema.json
schema/: schema.json
src/env_check/: __main__.py  anomaly.py  anomaly_detector.py  ci.py  ci_templates.py  drift.py  json_output.py  loader.py  migrate.py  repo_scanner.py  repo_usage_checker.py  secret_heuristics.py
tests/: test_cli.py  test_cli_exit_codes.py  test_json_output.py  test_loader.py  test_schema_validation.py  test_schema_validator.py  test_secret_scanner.py  test_validators.py
tests/fixtures/: invalid.env  sample.env  schema.json  schema_with_secret.json  valid.env
